feat(security): Implement role-based authorization (RBAC)
Added a 'Role' enum (USER, ADMIN) and associated it with the User entity.

New users are now assigned the 'USER' role by default upon registration.

Updated SecurityConfig to protect endpoints based on user roles:

- Added rules for '/api/v1/admin/**' to be accessible only by ADMINs.

- Specified that '/api/v1/tasks/**' can be accessed by both USER and ADMIN roles.

Created a test AdminController to verify the new authorization rules.